[FIX] Bug Fixes and Refactoring